[gd_scene load_steps=6 format=3 uid="uid://dsiaxum04ilk8"]

[ext_resource type="Script" path="res://Scenes/Enemy/test_enemy.gd" id="1_1jy1o"]
[ext_resource type="Texture2D" uid="uid://bdeyhc2pcadqo" path="res://icon.svg" id="1_vabny"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3savu"]
size = Vector2(32, 32)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pgj7w"]
size = Vector2(32, 8)

[sub_resource type="CircleShape2D" id="CircleShape2D_drtat"]
radius = 25.02

[node name="testEnemy" type="CharacterBody2D"]
collision_layer = 5
script = ExtResource("1_1jy1o")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.25, 0.25)
texture = ExtResource("1_vabny")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_3savu")

[node name="Jumpzone" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Jumpzone"]
position = Vector2(0, -24)
shape = SubResource("RectangleShape2D_pgj7w")

[node name="RayCast2D" type="RayCast2D" parent="."]
position = Vector2(15, 0)
target_position = Vector2(0, 24)

[node name="RayCast2D2" type="RayCast2D" parent="."]
position = Vector2(18, 8)
target_position = Vector2(9, 0)

[node name="attackCheck" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="attackCheck"]
shape = SubResource("CircleShape2D_drtat")

[connection signal="body_entered" from="Jumpzone" to="." method="_on_area_2d_body_entered"]
[connection signal="area_entered" from="attackCheck" to="." method="_on_attack_check_area_entered"]
[connection signal="area_exited" from="attackCheck" to="." method="_on_attack_check_area_exited"]
